force-app/main/default/objects/Traveler__c/Traveler__c.object-meta.xml
<CustomObject>
    <description>Custom object to capture individual traveler details for trip management, including contact information and emergency contacts.</description>
    <label>Traveler</label>
    <nameField>
        <label>Traveler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travelers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>