force-app/main/default/objects/Traveler__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <inlineHelpText>Enter the traveler&apos;s date of birth for booking and identification requirements.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>