force-app/main/default/objects/Traveler__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Enter the traveler&apos;s email address for trip communications and booking confirmations.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>