force-app/main/default/objects/Traveler__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <inlineHelpText>Enter emergency contact name and phone number for this traveler.</inlineHelpText>
    <label>Emergency Contact</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>