force-app/main/default/objects/Traveler__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <inlineHelpText>Enter any special requirements such as dietary restrictions, accessibility needs, or medical conditions.</inlineHelpText>
    <label>Special Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>