force-app/main/default/objects/Traveler__c/fields/Traveler_Type__c.field-meta.xml
<CustomField>
    <fullName>Traveler_Type__c</fullName>
    <inlineHelpText>Select whether this is the primary traveler or an additional traveler for the trip.</inlineHelpText>
    <label>Traveler Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>