force-app/main/default/objects/Traveler__c/recordTypes/Standard_Traveler.recordType-meta.xml
<RecordType>
    <fullName>Standard_Traveler</fullName>
    <active>true</active>
    <description>Standard traveler record type for all travelers</description>
    <label>Standard Traveler</label>
</RecordType>