force-app/main/default/objects/Traveler__c/validationRules/Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required</fullName>
    <active>true</active>
    <description>Ensures that email address is provided for all travelers</description>
    <errorConditionFormula>LEN(Email__c) = 0</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email address is required for all travelers.</errorMessage>
</ValidationRule>