force-app/main/default/objects/Traveler__c/validationRules/Emergency_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Emergency_Contact_Required</fullName>
    <active>true</active>
    <description>Ensures that emergency contact information is provided for all travelers</description>
    <errorConditionFormula>LEN(Emergency_Contact__c) = 0</errorConditionFormula>
    <errorDisplayField>Emergency_Contact__c</errorDisplayField>
    <errorMessage>Emergency contact information is required for all travelers.</errorMessage>
</ValidationRule>