force-app/main/default/objects/Traveler__c/validationRules/Reasonable_Birth_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reasonable_Birth_Date</fullName>
    <active>true</active>
    <description>Ensures date of birth is reasonable (not more than 120 years ago)</description>
    <errorConditionFormula>Date_of_Birth__c &lt; (TODAY() - 43800)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Please enter a valid date of birth.</errorMessage>
</ValidationRule>