force-app/main/default/objects/Traveler__c/validationRules/Valid_Birth_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Birth_Date</fullName>
    <active>true</active>
    <description>Ensures date of birth is not in the future</description>
    <errorConditionFormula>Date_of_Birth__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of birth cannot be in the future.</errorMessage>
</ValidationRule>